[gd_scene load_steps=5 format=3 uid="uid://cx2n0pkvl6o7c"]

[ext_resource type="Script" uid="uid://742ptnph4tb1" path="res://scripts/cadastro.gd" id="1_8urdi"]
[ext_resource type="Texture2D" uid="uid://b6ivaonnoycji" path="res://sprites/person.png" id="2_8urdi"]
[ext_resource type="Texture2D" uid="uid://cpj27egcylab7" path="res://sprites/key.png" id="3_dk4w7"]
[ext_resource type="Script" uid="uid://csexuhnygc2kb" path="res://login_button.gd" id="4_8urdi"]

[node name="Cadastro" type="Node2D"]
script = ExtResource("1_8urdi")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 2340.0

[node name="Control" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 600.0
offset_right = -128.0
offset_bottom = -800.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.5
offset_right = 160.5
offset_bottom = 99.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "goFishing"
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="Control/Control"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 300.0
offset_bottom = 331.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
placeholder_text = "usuario"
right_icon = ExtResource("2_8urdi")

[node name="PasswordInput" type="LineEdit" parent="Control/Control"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 490.0
offset_bottom = 640.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
placeholder_text = "senha"
right_icon = ExtResource("3_dk4w7")

[node name="Submit" type="Button" parent="Control/Control"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -240.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 72
text = "Cadastrar"

[node name="LoginButton" type="Button" parent="Control/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 42
text = "JÃ¡ tenho uma conta"
flat = true
script = ExtResource("4_8urdi")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Control/Control/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="Control/Control/LoginButton" to="Control/Control/LoginButton" method="_on_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_request_completed"]
